--- a/response.css
+++ b/response.css
@@ -292,3 +292,189 @@
 }
 
 }
+
+@media (max-width:420px)
+{
+    
+    header{
+        display: flex; 
+        flex-wrap: wrap;
+        flex-direction: column;
+        background-color: #121212; 
+        align-content: center;
+        /* align-items: center;  */
+        background-color: black;
+        padding: 1px 2%;
+        border-bottom: solid;
+        border-color: #FBF46D;
+        box-shadow: 0px 4px 8px 0px rgba(255, 192, 105, 0.5);
+        border-width: thin;
+        
+        
+        
+    }
+    .head{
+        width: 50%;
+        margin:0 auto;
+        
+    }
+    .header_image{
+        text-decoration: none;
+        white-space: nowrap;
+    }
+    .search{
+        border:2px solid blanchedalmond;
+        border-radius: 15px;
+        height: 20px;
+        width: 100%;
+        padding: 5px 5px;
+        outline: 0;
+        background-color: #EEEEEE;
+        color: black;
+        margin-left: 0px;
+    }
+    .search_btn{
+        display: inline-block;
+        position: relative;
+        background-color: black;
+        padding: 7.5px;
+        text-align: center;
+        border:1px none blanchedalmond;
+        color: white;
+        transition: border-radius 0.3s 
+           
+    }
+    #sb{
+        font-size: 15px;
+    }
+    .nav_link{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        padding-inline-start: 0;
+        }
+    .nav_link li{
+        font-size: 1em;
+        display: inline-block;
+        padding: 0 10px;
+    
+        
+    
+    
+    }
+    .nav_link li a{
+        text-decoration: none;
+        transition: 0.3s;
+        color: blanchedalmond;
+        display:inline-block;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+    .row{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        margin: 10px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .card {
+        flex: 1 1 21rem;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin: 10px 0px;
+        flex-direction: column;
+        box-shadow: 0px 4px 8px 0px rgba(255, 192, 105, 0.7);
+        transition: 0.3s;
+        border-radius: 10px; 
+        /* padding: 10px 10px; */
+        align-self: normal;
+        
+    }
+
+    #img1
+{
+    padding: 20px 0px;
+    width: 250px;
+    height: 250px;
+
+    border-radius: 5px 5px 0 0;
+    
+}
+#img2
+{
+    padding: 20px 0px;
+    width: 200px;
+    height: 200px;
+    border-radius: 5px 5px 0 0;
+}
+#img3
+{
+    padding: 20px 0px;
+    width: 200px;
+    height: 200px;
+    border-radius: 5px 5px 0 0;
+}
+#img4
+{
+    padding: 20px 0px;
+    width: 200px;
+    height: 400px;
+
+    border-radius: 5px 5px 0 0;
+}
+
+.name{
+    text-align: center;
+    text-decoration: underline;
+    
+}
+h3{
+    width: 100px;
+    margin-bottom: 10px;
+    padding: 10px;
+    display: inline-block;
+    text-align: center;
+    border-color: blanchedalmond;
+    border-style: solid;
+    transition: 0.3s;
+}
+
+#foot
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+#foot .nav_link{
+    /* background-color: blue; */
+    font-size: 1.5em;
+    margin-right: 5px;
+    color: red;
+
+}
+#foot div{
+    margin-left: 10px;
+}
+#foot p span{
+    margin-left: 0;
+    padding-left: 0;
+    color: #1597BB;
+}
+
+#foot p span:hover{
+    color: silver;
+}
+#foot div h4{
+    text-decoration: underline;
+}
+
+}
